# tree-sitter-yal

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-yal.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYal/: yal.h
bindings/swift/TreeSitterYalTests/: TreeSitterYalTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
